# LISAI

./: .gitignore  discussion_transcript.md  environment.cpu.yml  environment.cuda.yml  phase2_single_attempt_core.patch  pyproject.toml  pytest.ini
.lisai/queue/: control.json  selectors.json
configs/: data_config.yml  project_config.yml
configs/data/: data.yml
configs/experiments/: hdn_training.yml  hdn_training_old.yml  upsamp_training.yml
configs/inference/: defaults.yml  post_training.yml  upsamp.yml
configs/preprocess/: mltpl_snr.yml  preprocess.yml  single.yml  timelapse.yml
configs/project/: project.yml
configs/schema/: continue_training.schema.json  experiment.schema.json  inference-defaults.schema.json  inference.schema.json  preprocess.schema.json  retrain.schema.json
configs/training/: CARE.yml  continue_training.yml  fast_upsamp.yml  hdn.yml  retrain.yml  upsamp.yml
docs/: architecture.md  config_and_paths.md  data_organization.md  dataset_registry.md  dev_tooling_notes.md  preprocess.md  quickstart.md  run_selectors.md  schedulerImprovement.md
graphs/: Decorr_analysis.ipynb  Mito_protrusion_vs_duration.py  error_map.ipynb  mitoVesicleContactGraph.py
graphs/FRC_graphs/: 1FRC_UnetvsRCAN_upsamp.ipynb  1FRC_denoising.ipynb  Denoising_FRC_vs_betaKL.py  FRC_Denoising_Gag.py  FRC_Denoising_Gag_withSN2NandN2V.py  FRC_Upsamp_Gag.py  FRC_Upsamp_Gag_HighSNR_withConf.py  FRC_Upsamp_vimentin.py  FRC_vim_differentGT.py  (+7 more)
run_a/: .lisai_run_meta.json
run_b/: .lisai_run_meta.json
tests/: conftest.py  test_open_command.py  test_unified_cli.py
(+493 files in other folders)
